chore: add mongo db container

--- a/projects/shipment_api/docker-compose.yml
+++ b/projects/shipment_api/docker-compose.yml
@@ -12,6 +12,15 @@ services:
     image: redis:7-alpine
     ports:
       - "6379:6379"
+  
+  db:
+    image: mongo
+    restart: always
+    ports:
+      - 27017:27017
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
 
   create_shipment_worker:
     build: .
